refactor(trigger): 优化触发器任务执行逻辑
- 移除未使用的 CompletableFuture 和 TimeUnit 导入
- 简化聊天消息处理，直接调用同步方法替代异步调用
- 修复应用节点处理器中的代码结构
- 调整循环节点处理器的参数传递方式
- 使用 removeFirst 方法优化循环上下文数据清理